looking good so far just need to fix overflow issue and need to fix resize issue

--- a/styles/homecard.scss
+++ b/styles/homecard.scss
@@ -85,7 +85,31 @@
     color: white;
     font-family: Roboto;
     font-size: 20px;
-    border-right: 2px solid black;
     border-bottom: 2px solid black;
     text-align: center;
+}
+
+.timeboxingColumns {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.timeboxingColumn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-right: 2px solid black;
+}
+
+.timeboxingBackground {
+    overflow: hidden;
 }
